RESOLVED FIXED25513
V8 CSSStyleDeclaration bindings are slow
https://bugs.webkit.org/show_bug.cgi?id=25513
Summary V8 CSSStyleDeclaration bindings are slow
Dave Moore
Reported 2009-05-01 15:33:11 PDT
The V8 bindings convert every javascript property to its associated css style name. It then calls functions that convert that name to an id. This makes getting or setting css styles on elements slow.
Attachments
Fix (8.63 KB, patch)
2009-05-01 15:43 PDT, Dave Moore
dglazkov: review-
Fix (8.66 KB, patch)
2009-05-06 07:55 PDT, Dave Moore
dglazkov: review+
Dave Moore
Comment 1 2009-05-01 15:43:11 PDT
Dimitri Glazkov (Google)
Comment 2 2009-05-05 11:22:41 PDT
Comment on attachment 29949 [details] Fix Just a few nits/comments: > +class CSSPropertyInfo { > + public: align public to class. > + static HashMap<String, CSSPropertyInfo*> map; Use DEFINE_STATIC_LOCAL macro. > + if (!length) > + return NULL; return 0. > + else if (WTF::isASCIIUpper(propertyName[0])) > + return NULL; return 0. > - INC_STATS("DOM.CSSStyleDeclaration.NamedPropertyGetter"); > + //INC_STATS("DOM.CSSStyleDeclaration.NamedPropertyGetter"); Did you mean leave this in?
Dave Moore
Comment 3 2009-05-06 07:55:04 PDT
Dimitri Glazkov (Google)
Comment 4 2009-05-06 08:57:15 PDT
Comment on attachment 30049 [details] Fix Great! Am I landing it? :)
David Levin
Comment 5 2009-05-06 14:14:15 PDT
Assign to levin for landing.
David Levin
Comment 6 2009-05-06 15:03:22 PDT
Note You need to log in before you can comment on or make changes to this bug.